--- a/package.json
+++ b/package.json
@@ -54,18 +54,21 @@
     "classnames": "^2.2.5",
     "form-data": "^2.1.2",
     "jquery": "^3.1.1",
+    "moment": "^2.18.1",
     "react": "^15.5.0",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.12.2",
     "react-materialize": "^0.18.1",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
+    "react-time": "^4.3.0",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.2",
     "redux-logger": "^2.8.2",
     "redux-promise-middleware": "^4.2.0",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
+    "video-react": "^0.8.3",
     "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
